force-app/main/default/objects/Transaccion_de_Inventario__c/Transaccion_de_Inventario__c.object-meta.xml
<CustomObject>
    <label>Transacción de Inventario</label>
    <nameField>
        <displayFormat>TI-{0000}</displayFormat>
        <label>Nro de Transacción de Inventario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transacciones de Inventarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>