force-app/main/default/objects/Transaccion_de_Inventario__c/fields/EXPIRY_DATE__c.field-meta.xml
<CustomField>
    <fullName>EXPIRY_DATE__c</fullName>
    <label>Vencimiento</label>
    <type>Date</type>
</CustomField>