force-app/main/default/objects/Transaccion_de_Inventario__c/fields/ITEM_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>ITEM_DESCRIPTION__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>