force-app/main/default/objects/Transaccion_de_Inventario__c/fields/LOT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>LOT_NUMBER__c</fullName>
    <label>Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>