force-app/main/default/objects/Transaccion_de_Inventario__c/fields/ORGANIZATION_CODE__c.field-meta.xml
<CustomField>
    <fullName>ORGANIZATION_CODE__c</fullName>
    <label>Código de Organización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>