force-app/main/default/objects/Transaccion_de_Inventario__c/fields/ORGANIZATION_CODE_TRX__c.field-meta.xml
<CustomField>
    <fullName>ORGANIZATION_CODE_TRX__c</fullName>
    <label>Código de la Org de la Transacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>