force-app/main/default/objects/Transaccion_de_Inventario__c/fields/ORGANIZATION_NAME__c.field-meta.xml
<CustomField>
    <fullName>ORGANIZATION_NAME__c</fullName>
    <label>Nombre de Organización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>