force-app/main/default/objects/Transaccion_de_Inventario__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Transacciones de Inventarios</relationshipLabel>
    <relationshipName>Transacciones_de_Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>