force-app/main/default/objects/Transaccion_de_Inventario__c/fields/QTY_TRANSACTION__c.field-meta.xml
<CustomField>
    <fullName>QTY_TRANSACTION__c</fullName>
    <label>Cantidad Transacción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>