force-app/main/default/objects/Transaccion_de_Inventario__c/fields/SOURCE_TYPE_NAME__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_TYPE_NAME__c</fullName>
    <label>Tipo Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>