force-app/main/default/objects/Transaccion_de_Inventario__c/fields/SUBINVENTORY_CODE__c.field-meta.xml
<CustomField>
    <fullName>SUBINVENTORY_CODE__c</fullName>
    <label>Subinventario Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>