force-app/main/default/objects/Transaccion_de_Inventario__c/fields/TRANSACTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>TRANSACTION_DATE__c</fullName>
    <label>Fecha Transacción</label>
    <type>Date</type>
</CustomField>