force-app/main/default/objects/Transaccion_de_Inventario__c/fields/TRANSACTION_REFERENCE__c.field-meta.xml
<CustomField>
    <fullName>TRANSACTION_REFERENCE__c</fullName>
    <label>Referencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>