force-app/main/default/objects/Transaccion_de_Inventario__c/fields/TRANSACTION_TYPE_NAME__c.field-meta.xml
<CustomField>
    <fullName>TRANSACTION_TYPE_NAME__c</fullName>
    <label>Tipo Transacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>