force-app/main/default/objects/Transaccion_de_Inventario__c/fields/TRANSACTION_UOM__c.field-meta.xml
<CustomField>
    <fullName>TRANSACTION_UOM__c</fullName>
    <label>UDM</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>