force-app/main/default/objects/Transaccion_de_Inventario__c/fields/TRANSFER_SUBINVENTORY__c.field-meta.xml
<CustomField>
    <fullName>TRANSFER_SUBINVENTORY__c</fullName>
    <label>Subinventario Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>